# Warebot_Dashboard

./: .gitignore  README.md  package.xml  run.sh  setup.cfg  setup.py
launch/: dashboard.launch.py
src/nav_dashboard/: main.py  ros_bridge.py  web_server.py
web/: app.js  index.html  mobile.css  mobile.html  mobile.js  style.css
